<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/successTitle"
        style="@style/TextViewWhite"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/bg_edit_address_success_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corner_black">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            android:paddingBottom="30dp"
            android:paddingTop="30dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                style="@style/TextViewWhite"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:text="@string/bg_edit_address_title" />

            <talaviassaf.swappit.models.CleanEditText
                android:id="@+id/address"
                style="@style/EditText"
                android:hint="@string/bg_field_address"
                android:textColor="@android:color/white" />

            <View style="@style/WhiteDividerWithMargin1" />

            <talaviassaf.swappit.models.CleanEditText
                android:id="@+id/apartment"
                style="@style/EditText"
                android:hint="@string/bg_field_apartment"
                android:inputType="number"
                android:textColor="@android:color/white" />

            <View style="@style/WhiteDividerWithMargin1" />

            <talaviassaf.swappit.models.CleanEditText
                android:id="@+id/postcode"
                style="@style/EditText"
                android:hint="@string/bg_field_postcode"
                android:inputType="number"
                android:textColor="@android:color/white" />

            <View style="@style/WhiteDividerWithMargin1" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/confirm"
                    style="@style/TextViewWhite"
                    android:layout_marginEnd="25dp"
                    android:layout_marginRight="25dp"
                    android:text="@string/bg_edit_address_confirm" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cancel"
                    style="@style/TextViewWhite"
                    android:layout_marginLeft="25dp"
                    android:layout_marginStart="25dp"
                    android:text="@string/bg_edit_address_cancel" />

            </RadioGroup>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>