<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <RadioGroup
        android:id="@+id/uploadTypeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/scrip"
            style="@style/RadioButton2"
            android:drawableTop="@drawable/scrip"
            android:text="@string/show_by_voucher_type_scrip" />

        <View style="@style/EmptyView" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/magnetCard"
            style="@style/RadioButton2"
            android:drawableTop="@drawable/magnet_card"
            android:text="@string/show_by_voucher_type_magnet_card" />

        <View style="@style/EmptyView" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/paper"
            style="@style/RadioButton2"
            android:drawableTop="@drawable/paper"
            android:text="@string/show_by_voucher_type_paper" />

    </RadioGroup>

    <View
        android:id="@+id/divider"
        style="@style/WhiteDivider"
        android:layout_below="@+id/uploadTypeRadioGroup"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/chooseBrandName"
        style="@style/TextViewWhite"
        android:layout_below="@+id/divider"
        android:layout_centerHorizontal="true"
        android:text="@string/upload_type_choose_brand_name"
        android:typeface="serif" />

    <talaviassaf.swappit.models.CleanEditText
        android:id="@+id/brandsList"
        style="@style/EditText"
        android:layout_height="30dp"
        android:layout_below="@id/chooseBrandName"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/corner_transparent"
        android:hint="@string/upload_type_choose_brand_from_list" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/theChosenBrand"
        style="@style/TextViewWhite"
        android:layout_below="@id/brandsList"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/upload_type_chosen_brand" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/chosenBrand"
        style="@style/TextViewWhite"
        android:layout_below="@id/brandsList"
        android:layout_toEndOf="@id/theChosenBrand"
        android:layout_toRightOf="@id/theChosenBrand"
        android:typeface="serif" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/cleanChosenBrand"
        style="@style/CleanImageView"
        android:layout_below="@id/brandsList"
        android:layout_toEndOf="@id/chosenBrand"
        android:layout_toRightOf="@id/chosenBrand" />

</RelativeLayout>